# SegmentedDeque

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow 22.18.22.ui
controllers/: MainController.cpp  MainController.hpp
impl/: arraySequence.tpp  dynamicArray.tpp  linkedList.tpp  segmentedDeque.tpp
inc/: dynamicArray.hpp  linkedList.hpp  listSequence.hpp  segmentedDeque.hpp  sequence.hpp
models/impl/: dynamicArray.tpp  linkedList.tpp  listSequence.tpp  segmentedDeque.tpp
models/inc/: arraySequence.hpp  linkedList.hpp  segmentedDeque.hpp
tests/: arraySequenceTests.cpp  dynamicArrayTests.cpp  functionPointerTest.cpp  linkedListTests.cpp  listSequenceTests.cpp  segmentedDequeTest.cpp
types/: complex.hpp  person.hpp
views/: createSequenceDialog.cpp  createSequenceDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  operationdialog.cpp  operationdialog.h
